data/derived/comb/progs/unify/prog3697.ml.out
Characters 108-122:
  total + if s mod 10 <> 0 then digitalRoot2 s else 0;;
                                ^^^^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type int
